fix overflow

--- a/src/components/SlotsColumn/SlotsColumn.scss
+++ b/src/components/SlotsColumn/SlotsColumn.scss
@@ -6,5 +6,5 @@
   height: 90%;
   margin-right: 500px;
   margin-top: 30px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
